--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
+    "allowJs": true, //增加一行，允许编译JavaScript文件
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
